CORE-7691: added a minimum level query parameter to the permission lookup endpoints in the permission service
